// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders daily 1`] = `
<MyText
  style={
    Array [
      Object {
        "color": "#52C5DC",
        "fontSize": 14,
        "lineHeight": 18,
      },
      undefined,
    ]
  }
>
  Every day @ 7:00 PM
</MyText>
`;

exports[`renders monthly 1`] = `
<MyText
  style={
    Array [
      Object {
        "color": "#52C5DC",
        "fontSize": 14,
        "lineHeight": 18,
      },
      undefined,
    ]
  }
>
  Once a month on the 29th @ 7:00 PM
</MyText>
`;

exports[`renders once next month 1`] = `
<MyText
  style={
    Array [
      Object {
        "color": "#52C5DC",
        "fontSize": 14,
        "lineHeight": 18,
      },
      undefined,
    ]
  }
>
  Saturday, Apr 27 @ 5:00 PM
</MyText>
`;

exports[`renders once next week 1`] = `
<MyText
  style={
    Array [
      Object {
        "color": "#52C5DC",
        "fontSize": 14,
        "lineHeight": 18,
      },
      undefined,
    ]
  }
>
  Thursday, Apr 4 @ 11:00 PM
</MyText>
`;

exports[`renders once this week 1`] = `
<MyText
  style={
    Array [
      Object {
        "color": "#52C5DC",
        "fontSize": 14,
        "lineHeight": 18,
      },
      undefined,
    ]
  }
>
  Sunday @ 12:00 PM
</MyText>
`;

exports[`renders once today 1`] = `
<MyText
  style={
    Array [
      Object {
        "color": "#52C5DC",
        "fontSize": 14,
        "lineHeight": 18,
      },
      undefined,
    ]
  }
>
  Today @ 4:00 PM
</MyText>
`;

exports[`renders once tomorrow 1`] = `
<MyText
  style={
    Array [
      Object {
        "color": "#52C5DC",
        "fontSize": 14,
        "lineHeight": 18,
      },
      undefined,
    ]
  }
>
  Tomorrow @ 4:00 PM
</MyText>
`;

exports[`renders weekly 1`] = `
<MyText
  style={
    Array [
      Object {
        "color": "#52C5DC",
        "fontSize": 14,
        "lineHeight": 18,
      },
      undefined,
    ]
  }
>
  Every Friday @ 7:00 PM
</MyText>
`;

exports[`renders with placeholder correctly 1`] = `
<MyText
  style={
    Array [
      Object {
        "color": "#52C5DC",
        "fontSize": 14,
        "lineHeight": 18,
      },
      undefined,
    ]
  }
>
  text
</MyText>
`;

exports[`renders with reminder correctly 1`] = `
<MyText
  style={
    Array [
      Object {
        "color": "#52C5DC",
        "fontSize": 14,
        "lineHeight": 18,
      },
      undefined,
    ]
  }
>
  Today @ 12:00 PM
</MyText>
`;

exports[`renders without reminder or placeholder correctly 1`] = `
<MyText
  style={
    Array [
      Object {
        "color": "#52C5DC",
        "fontSize": 14,
        "lineHeight": 18,
      },
      undefined,
    ]
  }
>
  Set a Reminder
</MyText>
`;
